# cts

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-test  Jenkinsfile  MANIFEST.in  Makefile  README.md  Vagrantfile  create_sqlite_db  docker-compose.yml  get-version.sh  odcs.spec  pyproject.toml  requirements.txt  setup.py  start_frontend_from_here  start_odcs_from_here  submit_test_compose  submit_test_compose_oidc.py  tox.ini
.copr/: odcs-backend.service  odcs-fedora-conf.patch  odcs-pythonldap.patch  odcs.spec.in  prepare_spec.sh
client/: MANIFEST.in  requirements.txt  setup.py
client/contrib/: odcs
client/tests/: test_client_odcs.py
common/: Makefile  setup.py
conf/: config.py
cts/: models.py
docs/: Makefile  api.rst  client.rst  conf.py  index.rst  raw_config.rst
odcs/: __init__.py  api_utils.py  auth.py  backend.py  config.py  manage.py  models.py  pdc.py  poller.py  pungi.py  views.py
odcs-client/: requirements.txt
odcs-server/: MANIFEST.in
server/: requirements.txt  setup.py
server/conf/: config.py  pungi.conf
server/contrib/: odcs-promote-compose  odcs_test_deployment
server/tests/: Jenkinsfile  test_auth.py  test_backend.py  test_composerthread.py  test_consumer.py  test_metrics.py  test_mock_runroot.py  test_models.py  test_pulp.py  test_pungi.py  test_remove_expired_composes_thread.py  test_views.py  utils.py
tests/: test_auth.py  test_backend.py  test_composerthread.py  test_models.py  test_views.py
tests/repo/: ed-1.14.1-2.module_fd8ca23e.src.rpm  ed-debuginfo-1.14.1-2.module_fd8ca23e.x86_64.rpm  (+1 more)
(+32 files in other folders)
