[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cts"
version = "1.3.0"
description = "Compose Tracking service"
readme = "README.md"
license = "MIT"
authors = [
    { name = "The Compose Team", email = "cts-owner@fedoraproject.org" },
]
keywords = [
    "compose",
    "service",
    "tracking",
]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "apispec-webframeworks",
    "apispec",
    "Flask-Login",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "Flask",
    "marshmallow",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-sqlalchemy",
    "productmd",
    "prometheus_client",
    "python-fedora",
    "python-ldap",
    "requests",
    "sqlalchemy",
]

[project.scripts]
cts-manager = "cts.manage:cli"

[project.urls]
Homepage = "https://pagure.io/cts/"

[tool.hatch.build.targets.wheel.shared-data]
"conf/config.py" = "/etc/cts/config.py"

[tool.hatch.build.targets.sdist]
include = [
    "/conf",
]
